mob effect visual fixes